--- a/silver_contract/views/silver_service_type_views.xml
+++ b/silver_contract/views/silver_service_type_views.xml
@@ -7,6 +7,7 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
+                    <field name="code"/>
                     <field name="description"/>
                 </tree>
             </field>
@@ -21,6 +22,7 @@
                     <sheet>
                         <group>
                             <field name="name"/>
+                            <field name="code"/>
                             <field name="description"/>
                         </group>
                     </sheet>
