--- a/silver_network/views/silver_ap_views.xml
+++ b/silver_network/views/silver_ap_views.xml
@@ -19,8 +19,10 @@
                     <field name="username"/>
                     <!--field name="description_brand" invisible="1"/-->
                     <field name="state" invisible="1"/>
-                    <field name="state" widget="badge" decoration-danger="state == 'down'"
-                           decoration-success="state == 'active'"/>
+                    <field name="state" widget="badge"
+                           decoration-success="state in ['active', 'connected']"
+                           decoration-warning="state in ('suspended', 'disabled')"
+                           decoration-danger="state in ['removed', 'down']"/>
                     <!--widget name="web_ribbon" title="Activo" invisible="state != 'active'"/>
                     <widget name="web_ribbon" title="Down" bg_color="bg-danger" invisible="state == 'active'"/-->
 
