--- a/silver_network/views/silver_core_views.xml
+++ b/silver_network/views/silver_core_views.xml
@@ -16,8 +16,10 @@
 
                     <!--field name="port"/>
                     <field name="username"/-->
-                    <field name="state" widget="badge" decoration-danger="state == 'down'"
-                           decoration-success="state in [ 'active', 'connected']"/>
+                    <field name="state" widget="badge"
+                           decoration-success="state in ['active', 'connected']"
+                           decoration-warning="state in ('suspended', 'disabled')"
+                           decoration-danger="state in ['removed', 'down']"/>
                 </tree>
             </field>
         </record>
@@ -105,8 +107,10 @@
                                 <field name="ip"  required="1"/>
                                 <field name="port" />
                                   <field name="radius_id" required="1"/>
-                                 <field name="state" widget="badge" decoration-danger="state == 'down'"
-                           decoration-success="state in [ 'active', 'connected']"/>
+                                 <field name="state" widget="badge"
+                           decoration-success="state in ['active', 'connected']"
+                           decoration-warning="state in ('suspended', 'disabled')"
+                           decoration-danger="state in ['removed', 'down']"/>
                                 <field name="hostname_core" invisible="state!='active'"/>
 
 
