--- a/silver_network/views/silver_radius_views.xml
+++ b/silver_network/views/silver_radius_views.xml
@@ -17,8 +17,10 @@
                     <field name="ip"/>
                     <field name="port"/>
                     <!--field name="user_core_radius"/-->
-                    <field name="state" widget="badge" decoration-danger="state == 'down'"
-                           decoration-success="state == 'active'"/>
+                    <field name="state"  widget="badge"
+                           decoration-success="state in ['active', 'connected']"
+                           decoration-warning="state in ('suspended', 'disabled')"
+                           decoration-danger="state in ['removed', 'down']"/>
                 </tree>
             </field>
         </record>
